--- a/index.html
+++ b/index.html
@@ -5,13 +5,36 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GreenShop</title>
+    <title>Green Shop</title>
 </head>
 <body>
-<div>
-    <span>
-    
-    </span>
-</div>
+<header>
+    <div class="container">
+        <a href="#" class="logo">
+            <img src="img/Logo.svg" alt="logo">
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Shop</a>
+                </li>
+                <li>
+                    <a href="#">link</a>
+                </li>
+                <li>
+                    <a href="#">link</a>
+                </li>
+            </ul>
+        </nav>
+        <a href="#">Login</a>
+    </div>
+</header>
+<main>
+    <section class="banner"></section>
+</main>
+<footer></footer>
 </body>
 </html>
