--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Green Shop</title>
+    <link rel="stylesheet" href="css/style.css">
+   <title>Green Shop</title>
 </head>
 <body>
 <header>
     <div class="container">
-        <a href="#" class="logo">
-            <img src="img/Logo.svg" alt="logo">
+        <a href="index.html"  target="_blank" class="logo">
+            <img src="images/Logo.svg" alt="logo">
         </a>
         <nav>
             <ul>
@@ -22,19 +23,120 @@
                     <a href="#">Shop</a>
                 </li>
                 <li>
-                    <a href="#">link</a>
+                    <a href="#">Plant  Care</a>
                 </li>
                 <li>
-                    <a href="#">link</a>
+                    <a href="#">Blogs</a>
                 </li>
             </ul>
         </nav>
-        <a href="#">Login</a>
+        <div class="log">
+            <a class="search" href="#" target="_blank" ><img src="images/Vector.svg" alt="search"></a>
+            <a class="basket" href="#" target="_blank" ><img src="images/basket.svg" alt="basket"></a>
+            <a class="login" href="Register_form.html" target="_blank"><img src="images/Logout.svg" alt="login">Login
+            </a>
+        </div>
     </div>
 </header>
 <main>
-    <section class="banner"></section>
+    <section class="banner">
+        <div class="container">
+            <article>
+            <h4>Welcome to GreenShop</h4>
+            <h1>Let’s Make a <br> Better <span>Planet</span></h1>
+            <p>We are an online plant shop offering a wide range of cheap and trendy plants. Use our plants to create an unique Urban Jungle. Order your favorite plants!</p>
+            <a href="#">SHOP NOW</a>
+            </article>
+            <img src="images/banner_1.png" alt="banner">
+        </div>
+    </section>
+
+    <section class="categories">
+        <div class="container">
+            <div class="left_container">
+                <article>
+
+                    <a href="#" target="_blank">
+                    House Plants</a>
+                    <a href="#" target="_blank">
+                    Potter Plants</a>
+                    <a href="#" target="_blank">
+                    Seeds</a>
+                    <a href="#" target="_blank">
+                    Small Plants</a>
+                    <a href="#" target="_blank">
+                    Big Plants</a>
+                    <a href="#" target="_blank">
+                    Succulents</a>
+                    <a href="#" target="_blank">
+                    Terrariums</a>
+                    <a href="#" target="_blank">
+                    Gardening</a>
+                    <a href="#" target="_blank">
+                    Accessories</a>
+                </article>
+
+                    <p>Price Range</p>
+
+                <img src="images/Group25.jpg" alt="left_container">
+            </div>
+            <div class="products">
+                <div class="select">
+                    <p>ghghgh</p>
+                </div>
+
+                <div class="cards">
+                    <article></article>
+                    <article></article>
+                    <article></article>
+                    <article></article>
+                    <article></article>
+                    <article></article>
+                    <article></article>
+                    <article></article>
+                    <article></article>
+
+                </div>
+                <div class="pages">
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="find_more">
+       <div class="box_1">
+
+       </div>
+        <div class="box_2">
+
+        </div>
+    </section>
+
+    <section class="posts">
+        <div class="title">
+            <div class="read_1">
+
+            </div>
+            <div class="read_2">
+
+            </div>
+            <div class="read_3">
+
+            </div>
+            <div class="read_4">
+
+            </div>
+        </div>
+    </section>
 </main>
-<footer></footer>
+<footer>
+    <section class="last">
+        <div>
+
+        </div>
+    </section>
+</footer>
 </body>
 </html>
