--- a/index.html
+++ b/index.html
@@ -44,39 +44,71 @@
             <article>
             <h4>Welcome to GreenShop</h4>
             <h1>Let’s Make a <br> Better <span>Planet</span></h1>
-            <p>We are an online plant shop offering a wide range of cheap and trendy plants. Use our plants to create an unique Urban Jungle. Order your favorite plants!</p>
+            <p>We are an online plant shop offering a wide range of cheap and trendy plants. Use our plants to create a unique Urban Jungle. Order your favorite plants!</p>
             <a href="#">SHOP NOW</a>
             </article>
             <img src="images/banner_1.png" alt="banner">
         </div>
     </section>
 
+
+
+
+
+
     <section class="categories">
         <div class="container">
             <div class="left_container">
-                <article>
+                <h2>Categories</h2>
+                <div class="link_list">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="#" target="_blank">
+                                        House Plants</a>
+                            </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Potter Plants</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Seeds</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Small Plants</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Big Plants</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Succulents</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Terrariums</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Gardening</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Accessories</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="numbers">
 
-                    <a href="#" target="_blank">
-                    House Plants</a>
-                    <a href="#" target="_blank">
-                    Potter Plants</a>
-                    <a href="#" target="_blank">
-                    Seeds</a>
-                    <a href="#" target="_blank">
-                    Small Plants</a>
-                    <a href="#" target="_blank">
-                    Big Plants</a>
-                    <a href="#" target="_blank">
-                    Succulents</a>
-                    <a href="#" target="_blank">
-                    Terrariums</a>
-                    <a href="#" target="_blank">
-                    Gardening</a>
-                    <a href="#" target="_blank">
-                    Accessories</a>
-                </article>
+                    </div>
+                    <div class="pull">
+                        <h2>Price Range</h2>
+                    </div>
 
-                    <p>Price Range</p>
 
                 <img src="images/Group25.jpg" alt="left_container">
             </div>
@@ -86,7 +118,7 @@
                 </div>
 
                 <div class="cards">
-                    <article></article>
+                    <article>Log</article>
                     <article></article>
                     <article></article>
                     <article></article>
