header+div_last

--- a/index.html
+++ b/index.html
@@ -44,60 +44,144 @@
             <article>
             <h4>Welcome to GreenShop</h4>
             <h1>Let’s Make a <br> Better <span>Planet</span></h1>
-            <p>We are an online plant shop offering a wide range of cheap and trendy plants. Use our plants to create an unique Urban Jungle. Order your favorite plants!</p>
+            <p>We are an online plant shop offering a wide range of cheap and trendy plants. Use our plants to create a unique Urban Jungle. Order your favorite plants!</p>
             <a href="#">SHOP NOW</a>
             </article>
             <img src="images/banner_1.png" alt="banner">
         </div>
     </section>
 
+
+
+
+
+
     <section class="categories">
-        <div class="container">
+        <div class="container_2">
             <div class="left_container">
-                <article>
+                <h2>Categories</h2>
+                <div class="link_list">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="#" target="_blank">
+                                        House Plants</a>
+                            </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Potter Plants</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Seeds</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Small Plants</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Big Plants</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Succulents</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Terrariums</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Gardening</a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        Accessories</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="numbers">
 
-                    <a href="#" target="_blank">
-                    House Plants</a>
-                    <a href="#" target="_blank">
-                    Potter Plants</a>
-                    <a href="#" target="_blank">
-                    Seeds</a>
-                    <a href="#" target="_blank">
-                    Small Plants</a>
-                    <a href="#" target="_blank">
-                    Big Plants</a>
-                    <a href="#" target="_blank">
-                    Succulents</a>
-                    <a href="#" target="_blank">
-                    Terrariums</a>
-                    <a href="#" target="_blank">
-                    Gardening</a>
-                    <a href="#" target="_blank">
-                    Accessories</a>
-                </article>
+                    </div>
+                    <div class="pull">
+                        <h2>Price Range</h2>
+                    </div>
 
-                    <p>Price Range</p>
 
                 <img src="images/Group25.jpg" alt="left_container">
             </div>
+
+
             <div class="products">
                 <div class="select">
-                    <p>ghghgh</p>
+                    <ul>
+                        <li>All plants</li>
+                        <li>New arrivals</li>
+                        <li>Sale</li>
+                    </ul>
+
                 </div>
 
                 <div class="cards">
-                    <article></article>
-                    <article></article>
-                    <article></article>
-                    <article></article>
-                    <article></article>
-                    <article></article>
-                    <article></article>
-                    <article></article>
-                    <article></article>
+                    <article>
+                        <img src="images/image_1.png" alt="cards">
+                        <h4>Barberton Daisy</h4>
+                        <a href="#">$ 119.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_2.png" alt="cards">
+                        <h4>Angel Wing Begonia</h4>
+                        <a href="#">$ 169.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_3.png" alt="cards">
+                        <h4>African Violet</h4>
+                        <a href="#">$ 199.00<span>$ 229.00</span></a>
+                    </article>
+                    <article>
+                        <img src="images/image_4.png" alt="cards">
+                        <h4>Beach Spider Lily</h4>
+                        <a href="#">$ 129.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_5.png" alt="cards">
+                        <h4>Blushing Bromeliad</h4>
+                        <a href="#">$ 139.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_6.png" alt="cards">
+                        <h4>Aluminum Plant</h4>
+                        <a href="#">$ 179.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_7.png" alt="cards">
+                        <h4>Bird's Nest Fern</h4>
+                        <a href="#">$ 99.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_8.png" alt="cards">
+                        <h4>Broadleaf Lady Palm</h4>
+                        <a href="#">$ 59.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_9.png" alt="cards">
+                        <h4>Chinese Evergreen</h4>
+                        <a href="#">$ 39.00</a>
+                    </article>
 
                 </div>
                 <div class="pages">
+                    <ul>
+                        <li><h5>1</h5></li>
+                        <li><h5>2</h5></li>
+                        <li><h5>3</h5></li>
+                        <li><h5>4</h5></li>
+                        <li>
+                            <a href="#"><img src="images/arrow_Right.svg" alt="pages"></a>
+                        </li>
+                    </ul>
 
                 </div>
             </div>
