--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
     <section class="categories">
-        <div class="container">
+        <div class="container_2">
             <div class="left_container">
                 <h2>Categories</h2>
                 <div class="link_list">
@@ -112,24 +112,76 @@
 
                 <img src="images/Group25.jpg" alt="left_container">
             </div>
+
+
             <div class="products">
                 <div class="select">
-                    <p>ghghgh</p>
+                    <ul>
+                        <li>All plants</li>
+                        <li>New arrivals</li>
+                        <li>Sale</li>
+                    </ul>
+
                 </div>
 
                 <div class="cards">
-                    <article>Log</article>
-                    <article></article>
-                    <article></article>
-                    <article></article>
-                    <article></article>
-                    <article></article>
-                    <article></article>
-                    <article></article>
-                    <article></article>
+                    <article>
+                        <img src="images/image_1.png" alt="cards">
+                        <h4>Barberton Daisy</h4>
+                        <a href="#">$ 119.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_2.png" alt="cards">
+                        <h4>Angel Wing Begonia</h4>
+                        <a href="#">$ 169.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_3.png" alt="cards">
+                        <h4>African Violet</h4>
+                        <a href="#">$ 199.00<span>$ 229.00</span></a>
+                    </article>
+                    <article>
+                        <img src="images/image_4.png" alt="cards">
+                        <h4>Beach Spider Lily</h4>
+                        <a href="#">$ 129.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_5.png" alt="cards">
+                        <h4>Blushing Bromeliad</h4>
+                        <a href="#">$ 139.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_6.png" alt="cards">
+                        <h4>Aluminum Plant</h4>
+                        <a href="#">$ 179.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_7.png" alt="cards">
+                        <h4>Bird's Nest Fern</h4>
+                        <a href="#">$ 99.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_8.png" alt="cards">
+                        <h4>Broadleaf Lady Palm</h4>
+                        <a href="#">$ 59.00</a>
+                    </article>
+                    <article>
+                        <img src="images/image_9.png" alt="cards">
+                        <h4>Chinese Evergreen</h4>
+                        <a href="#">$ 39.00</a>
+                    </article>
 
                 </div>
                 <div class="pages">
+                    <ul>
+                        <li><h5>1</h5></li>
+                        <li><h5>2</h5></li>
+                        <li><h5>3</h5></li>
+                        <li><h5>4</h5></li>
+                        <li>
+                            <a href="#"><img src="images/arrow_Right.svg" alt="pages"></a>
+                        </li>
+                    </ul>
 
                 </div>
             </div>
