--- a/index.html
+++ b/index.html
@@ -51,62 +51,60 @@
         </div>
     </section>
 
-
-
-
-
-
     <section class="categories">
         <div class="container_2">
             <div class="left_container">
-                <h2>Categories</h2>
                 <div class="link_list">
-                    <nav>
-                        <ul>
-                            <li>
-                                <a href="#" target="_blank">
+                    <h2>Categories</h2>
+                    <ul>
+                        <li>
+                            <a href="#" target="_blank">
                                         House Plants</a>
-                            </li>
-                                <li>
-                                    <a href="#" target="_blank">
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
                                         Potter Plants</a>
-                                </li>
-                                <li>
-                                    <a href="#" target="_blank">
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
                                         Seeds</a>
-                                </li>
-                                <li>
-                                    <a href="#" target="_blank">
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
                                         Small Plants</a>
-                                </li>
-                                <li>
-                                    <a href="#" target="_blank">
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
                                         Big Plants</a>
-                                </li>
-                                <li>
-                                    <a href="#" target="_blank">
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
                                         Succulents</a>
-                                </li>
-                                <li>
-                                    <a href="#" target="_blank">
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
                                         Terrariums</a>
-                                </li>
-                                <li>
-                                    <a href="#" target="_blank">
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
                                         Gardening</a>
-                                </li>
-                                <li>
-                                    <a href="#" target="_blank">
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
                                         Accessories</a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="numbers">
-
-                    </div>
-                    <div class="pull">
-                        <h2>Price Range</h2>
+                        </li>
+                    </ul>
+                </div>
+                <div class="price">
+                    <h2>Price Range</h2>
+                </div>
+                <div class="size">
+                    <h2>Size</h2>
+                    <ul>
+                        <li>Small</li>
+                        <li>Medium</li>
+                        <li>Large</li>
+                    </ul>
                     </div>
 
 
@@ -126,47 +124,47 @@
 
                 <div class="cards">
                     <article>
-                        <img src="images/image_1.png" alt="cards">
+                        <img src="images/image_11.png" alt="cards">
                         <h4>Barberton Daisy</h4>
                         <a href="#">$ 119.00</a>
                     </article>
                     <article>
-                        <img src="images/image_2.png" alt="cards">
+                        <img src="images/image_12.png" alt="cards">
                         <h4>Angel Wing Begonia</h4>
                         <a href="#">$ 169.00</a>
                     </article>
                     <article>
-                        <img src="images/image_3.png" alt="cards">
+                        <img src="images/image_13.png" alt="cards">
                         <h4>African Violet</h4>
                         <a href="#">$ 199.00<span>$ 229.00</span></a>
                     </article>
                     <article>
-                        <img src="images/image_4.png" alt="cards">
+                        <img src="images/image_14.png" alt="cards">
                         <h4>Beach Spider Lily</h4>
                         <a href="#">$ 129.00</a>
                     </article>
                     <article>
-                        <img src="images/image_5.png" alt="cards">
+                        <img src="images/image_15.png" alt="cards">
                         <h4>Blushing Bromeliad</h4>
                         <a href="#">$ 139.00</a>
                     </article>
                     <article>
-                        <img src="images/image_6.png" alt="cards">
+                        <img src="images/image_16.png" alt="cards">
                         <h4>Aluminum Plant</h4>
                         <a href="#">$ 179.00</a>
                     </article>
                     <article>
-                        <img src="images/image_7.png" alt="cards">
+                        <img src="images/image_17.png" alt="cards">
                         <h4>Bird's Nest Fern</h4>
                         <a href="#">$ 99.00</a>
                     </article>
                     <article>
-                        <img src="images/image_8.png" alt="cards">
+                        <img src="images/image_18.png" alt="cards">
                         <h4>Broadleaf Lady Palm</h4>
                         <a href="#">$ 59.00</a>
                     </article>
                     <article>
-                        <img src="images/image_9.png" alt="cards">
+                        <img src="images/image_19.png" alt="cards">
                         <h4>Chinese Evergreen</h4>
                         <a href="#">$ 39.00</a>
                     </article>
@@ -174,13 +172,15 @@
                 </div>
                 <div class="pages">
                     <ul>
-                        <li><h5>1</h5></li>
-                        <li><h5>2</h5></li>
-                        <li><h5>3</h5></li>
-                        <li><h5>4</h5></li>
-                        <li>
-                            <a href="#"><img src="images/arrow_Right.svg" alt="pages"></a>
-                        </li>
+                        <li><a href="#">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
+                        <li><a href="#">
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M6.375 3.75C6.375 3.75 11.625 6.858 11.625 9C11.625 11.1413 6.375 14.25 6.375 14.25" stroke="#3D3D3D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        </a></li>
                     </ul>
 
                 </div>
